manifests/sb-bench-svc.yaml
  # hello-kubernetes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-bench
  labels:
    scrape: actuator-prometheus
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 32121
  - name: metrics
    port: 15020
  selector:
    app: sb-bench
