manifests/sb-bench-ing-istio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: sb-bench-istio
spec:
  rules:
  - host: sb-bench.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: sb-bench
            port:
              number: 80
